# printer.esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  default_16MB.csv  platformio.ini  sdkconfig.defaults  sdkconfig.sony898-esp32s3  todo.md
components/sony898_emulator/: CMakeLists.txt  Sony898Printer.cpp  Sony898Printer.hpp  config.h  idf_component.yml  sony898_counter.c  sony898_counter.h  sony898_emulator.c  sony898_emulator.h  sony898_image.c  sony898_image.h  sony898_parser.c  sony898_parser.h  sony898_printer_iface.c  sony898_printer_iface.h  sony898_sensors.c  sony898_sensors.h  sony898_status.c  sony898_status.h  sony898_usb.c  sony898_usb.h
src/: CMakeLists.txt  main.c  main.cpp
test_host/: mock_esp.h  test_parser.c
test_host/freertos/: FreeRTOS.h
tools/: dump_pgm.py
